// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders popup for concern suggestion 1`] = `
<div
  className="background"
>
  <div
    className="content smallContentPadding"
  >
    <div
      className="acceptModalContent"
    >
      <div
        className="acceptModalHeader"
      >
        <div
          className="acceptModalDismissButton"
          onClick={[Function]}
        />
      </div>
      <div
        className="acceptModalBody"
      >
        <div
          className="acceptModalTitle noMargin"
        >
          Reason for dismissing this suggestion
        </div>
        <div
          className="acceptModalSubtitle"
        >
          Select from one of the available options
        </div>
        <div
          className="acceptModalDropdown"
        >
          <select
            className="select roundedInput"
            name="dismissedReason"
            onChange={[Function]}
            value=""
          >
            <option
              disabled={true}
              hidden={true}
              value=""
            >
              Select a reason
            </option>
            <option
              value="not applicable"
            >
              Not applicable to this patient
            </option>
            <option
              value="too much work"
            >
              This suggestion requires too much work
            </option>
            <option
              value="dangerous"
            >
              Tackling this suggestion would be dangerous for the patient
            </option>
          </select>
        </div>
        <div
          className="acceptModalButtons"
        >
          <div
            className="invertedButton rightSmallGutter smallButton"
            onClick={[Function]}
          >
            Cancel
          </div>
          <div
            className="button smallButton redButton"
            onClick={[Function]}
          >
            Dismiss concern
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders popup for goal suggestion 1`] = `
<div
  className="background"
>
  <div
    className="content smallContentPadding"
  >
    <div
      className="acceptModalContent"
    >
      <div
        className="acceptModalHeader"
      >
        <div
          className="acceptModalDismissButton"
          onClick={[Function]}
        />
      </div>
      <div
        className="acceptModalBody"
      >
        <div
          className="acceptModalTitle noMargin"
        >
          Reason for dismissing this suggestion
        </div>
        <div
          className="acceptModalSubtitle"
        >
          Select from one of the available options
        </div>
        <div
          className="acceptModalDropdown"
        >
          <select
            className="select roundedInput"
            name="dismissedReason"
            onChange={[Function]}
            value=""
          >
            <option
              disabled={true}
              hidden={true}
              value=""
            >
              Select a reason
            </option>
            <option
              value="not applicable"
            >
              Not applicable to this patient
            </option>
            <option
              value="too much work"
            >
              This suggestion requires too much work
            </option>
            <option
              value="dangerous"
            >
              Tackling this suggestion would be dangerous for the patient
            </option>
          </select>
        </div>
        <div
          className="acceptModalButtons"
        >
          <div
            className="invertedButton rightSmallGutter smallButton"
            onClick={[Function]}
          >
            Cancel
          </div>
          <div
            className="button smallButton redButton"
            onClick={[Function]}
          >
            Dismiss goal
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
